RESOLVED FIXED152366
REGRESSION (r194125): Crashes in touchesEndedWithEvent on occasion when interacting with the page
https://bugs.webkit.org/show_bug.cgi?id=152366
Summary REGRESSION (r194125): Crashes in touchesEndedWithEvent on occasion when inter...
Tim Horton
Reported 2015-12-16 16:06:38 PST
REGRESSION (r194125): Crashes in touchesEndedWithEvent on occasion when interacting with the page Steps to Reproduce: Not sure. Beth has had a lot of luck, I have never reproduced it.
Attachments
patch (2.41 KB, patch)
2015-12-16 16:07 PST, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2015-12-16 16:07:15 PST
WebKit Commit Bot
Comment 2 2015-12-16 16:09:24 PST
Attachment 267506 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-12-16 16:13:27 PST
Tim Horton
Comment 4 2015-12-16 16:14:13 PST
Simon Fraser (smfr)
Comment 5 2015-12-16 16:36:23 PST
Comment on attachment 267506 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=267506&action=review > Source/WebKit2/ChangeLog:4 > + Need the bug URL (OOPS!). Ooops
Note You need to log in before you can comment on or make changes to this bug.