REGRESSION (r194125): Crashes in touchesEndedWithEvent on occasion when interacting with the page https://bugs.webkit.org/show_bug.cgi?id=152366 <rdar://problem/23929672>

Reviewed by Beth Dakin.

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::touchesEndedWithEvent):
(WebKit::WebViewImpl::touchesCancelledWithEvent):
NSTouch identifiers aren't pointer-comparable. We need to use isEqual to
compare them and find the ones to remove.


Canonical link: https://commits.webkit.org/170479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194186 268f45cc-cd09-0410-ab3c-d52691b4dbfc